--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "english-app-backend",
+  "name": "word-game-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "pg": "^8.13.0"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "pg": "^8.7.1",
+    "serverless-http": "^2.7.0"
   }
 }
